# jormungandr

./: .appveyor.yml  .editorconfig  .github_changelog_generator  .gitignore  .gitmodules  .gitpod.yml  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Earthfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  ROADMAP.md  SUMMARY.md  appveyor.yml  book.toml  build.rs  config.yaml  demo.sh  entry.sh  entrypoint.sh  flake.nix  genkeypair.sh  index.html  introduction.html  introduction.md  jormungandr.nix  openapi.yaml  pool-storage  print.html  rustfmt.toml  searchindex.js  searchindex.json  shell.nix  stop_demo.sh
cardano-legacy-address/: Cargo.toml  README.md
cardano-legacy-address/src/: address.rs  cbor.rs  lib.rs
chain-addr/: Cargo.toml  build.rs
chain-addr/src/: lib.rs  testing.rs
chain-core/: Cargo.toml  README.md
chain-core/src/: lib.rs  mempack.rs  packer.rs  property.rs
chain-crypto/: Cargo.toml
chain-crypto/src/: asymlock.rs  bech32.rs  digest.rs  evolving.rs  hash.rs  hex.rs  kes.rs  key.rs  lib.rs  role.rs  sign.rs  testing.rs  vrf.rs
chain-crypto/src/algorithms/: ed25519.rs  ed25519_bip32.rs  ed25519_derive.rs  ed25519_extended.rs  fakemmm.rs  mod.rs
chain-impl-mockchain/: Cargo.toml  FORMAT.md  README.md  UPDATE.md
chain-impl-mockchain/doc/: address.md  format.abnf  format.md  incentives.md  multisig.md  overview.md
chain-impl-mockchain/src/: account.rs  address.rs  block.rs  certificate.rs  config.rs  date.rs  environment.rs  error.rs  fee.rs  key.rs  ledger.rs  legacy.rs  lib.rs  milli.rs  multiverse.rs  rewards.rs  setting.rs  stake.rs  state.rs  testing.rs  transaction.rs  treasury.rs  txbuilder.rs  update.rs  utxo.rs  value.rs
chain-impl-mockchain/src/accounting/: account.rs
chain-impl-mockchain/src/block/: builder.rs  content.rs  cstruct.rs  header.rs  headerraw.rs  leaderlog.rs  message.rs  mod.rs  version.rs
chain-impl-mockchain/src/certificate/: delegation.rs  mod.rs  pool.rs  test.rs
chain-impl-mockchain/src/fragment/: content.rs  mod.rs
chain-impl-mockchain/src/header/: builder.rs  components.rs  cstruct.rs  deconstruct.rs  eval.rs  header.rs  mod.rs  version.rs
chain-impl-mockchain/src/leadership/: bft.rs  genesis.rs  mod.rs  none.rs
chain-impl-mockchain/src/ledger/: check.rs  info.rs  iter.rs  ledger.rs  mod.rs  pots.rs
chain-impl-mockchain/src/message/: config.rs  initial.rs  mod.rs  raw.rs
chain-impl-mockchain/src/multisig/: declaration.rs  index.rs  ledger.rs  mod.rs  witness.rs
chain-impl-mockchain/src/stake/: delegation.rs  distribution.rs  mod.rs  role.rs  stake.rs
chain-impl-mockchain/src/testing/: address.rs  cert_signer.rs  ledger.rs  mod.rs  requests.rs  tx_builder.rs
chain-impl-mockchain/src/transaction/: builder.rs  element.rs  input.rs  io.rs  mod.rs  payload.rs  transaction.rs  transfer.rs  utxo.rs  witness.rs
chain-impl-mockchain/tests/: tests.rs
chain-impl-mockchain/tests/builder/: mod.rs  witnesses_tests.rs
chain-impl-mockchain/tests/common/: accounts.rs  address.rs  ledger.rs  mod.rs  tx_builder.rs
chain-impl-mockchain/tests/genesis/: genesis_tests.rs  mod.rs
chain-impl-mockchain/tests/ledger/: discrimination_tests.rs  initial_funds_tests.rs  ledger_tests.rs  mod.rs
chain-storage/: Cargo.toml
chain-storage-sqlite/: Cargo.toml
chain-storage-sqlite/examples/: import.rs  verify.rs
chain-storage-sqlite/src/: lib.rs
chain-storage/src/: chain.rs  error.rs  lib.rs  memory.rs  store.rs
chain-time/: Cargo.toml
chain-time/src/: era.rs  lib.rs  testing.rs  timeframe.rs  timeline.rs  units.rs
ed25519-bip32/: Cargo.toml
ed25519-bip32/src/: bench.rs  hdwallet.rs  hex.rs  key.rs  lib.rs  securemem.rs  signature.rs  tests.rs
explorer/: Cargo.toml
explorer/src/: indexer.rs  lib.rs  logging.rs  main.rs  settings.rs  subscription.rs  tests.rs
explorer/tests/: explorer_tests.rs
jcli/: Cargo.toml  address.html  build.rs  certificate.html  genesis.html  introduction.html  key.html  rest.html  transaction.html  transaction.md  vote.html
jcli-lib/: Cargo.toml
jcli-lib/src/: address.rs  auto_completion.rs  key.rs  lib.rs
jcli/src/: lib.rs  main.rs
jcli/tests/: tests.rs
jormungandr/: Cargo.toml  build.rs  entrypoint.sh
jormungandr-integration-tests/: Cargo.toml  build.rs
jormungandr-integration-tests/src/: lib.rs
jormungandr-lib/: Cargo.toml
jormungandr-lib/src/: lib.rs  multiaddr.rs  time.rs
jormungandr-mock/: Cargo.toml  build.rs
jormungandr-mock/src/: client.rs  lib.rs  server.rs
jormungandr-scenario-tests/: Cargo.toml
jormungandr-scenario-tests/src/: example_scenarios.rs  graphql.rs  lib.rs  main.rs  node.rs  programs.rs  scenarios_repository.rs  slog.rs  style.rs  wallet.rs
jormungandr-utils/: Cargo.toml
jormungandr-utils/src/: certificate.rs  lib.rs  serde.rs
jormungandr-watchdog/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
jormungandr-watchdog-derive/: Cargo.toml
jormungandr-watchdog-derive/src/: lib.rs
jormungandr-watchdog/doc/: book.toml
jormungandr-watchdog/examples/: stdin_echo.rs
jormungandr-watchdog/src/: lib.rs
jormungandr-watchdog/tests/: compat.rs  ping_pong.rs  watchdog.rs
jormungandr/benches/: rest_v0.rs
jormungandr/src/: blockchain_stuck_notifier.rs  client.rs  diagnostic.rs  explorer.rs  intercom.rs  lib.rs  main.rs  state.rs  stats_counter.rs  stuck_notifier.rs  watch_client.rs
log-lib/: Cargo.toml
log-lib/src/: lib.rs
modules/blockchain/: Cargo.toml  README.md
modules/kms/: Cargo.toml
modules/pool/: Cargo.toml  README.md
network-core/: Cargo.toml  build.rs
network-core/src/: client.rs  error.rs  gossip.rs  lib.rs  server.rs  subscription.rs
network-grpc/: Cargo.toml  build.rs
network-grpc/proto/: node.proto  types.proto
network-grpc/src/: client.rs  convert.rs  lib.rs  network_core.rs  peer.rs  server.rs  service.rs
ouroboros-praos/: Cargo.toml
ouroboros-praos/src/: dleq.rs  lib.rs  vrf.rs
typed-bytes/: Cargo.toml
typed-bytes/src/: builder.rs  lib.rs
utils/: Cargo.toml
utils/src/: certificate.rs  lib.rs  serde.rs  structopt.rs
(+2375 files in other folders)
