[workspace]
members = [
  "jormungandr-lib",
  "jormungandr",
  "jcli",
  "modules/settings",
  "modules/blockchain",
  "testing/jormungandr-testing-utils",
  "testing/jormungandr-integration-tests",
  "testing/jormungandr-scenario-tests",
  "testing/mjolnir",
]


# FIXME: revert this after testing
[patch.'https://github.com/input-output-hk/chain-libs.git']
chain-network = { git = "https://github.com/danielsanchezq/chain-libs.git", branch = "tonic04" }