[package]
name = "cardano-legacy-address"
version = "0.1.1"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/input-output-hk/rust-cardano"
homepage = "https://github.com/input-output-hk/rust-cardano/cardano-legacy-address#README.md"
description = """
Support for the useful part of legacy cardano address.
"""
keywords = [ "Cardano", "Wallet", "Crypto" ]

[build-dependencies]

[dependencies]
cryptoxide = "0.1"
cbor_event = "^2.1.3"
ed25519-bip32 = "^0.1.1"

[features]
default = []
with-bench = []
