[package]
name = "chain-addr"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "Cardano", "Wallet", "Crypto", "Address" ]

[dependencies]
cryptoxide = "0.1"
cardano = { path = "../cardano" }
chain-core = { path = "../chain-core" }
bech32 = "0.6"
quickcheck = { version = "0.8", optional = true }

[dev-dependencies]
quickcheck = "0.8"

[features]
property-test-api = ["quickcheck"]
