[package]
name = "chain-addr"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "Cardano", "Wallet", "Crypto", "Address" ]

[features]
generic-serialization = [ "cardano/generic-serialization", "serde", "serde_derive" ]
property-test-api = ["quickcheck"]

[dependencies]
bech32 = "0.6"
cardano = { path = "../cardano" }
chain-core = { path = "../chain-core" }
cryptoxide = "0.1"
quickcheck = { version = "0.8", optional = true }
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }

[dev-dependencies]
quickcheck = "0.8"
