[package]
name = "chain-crypto"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "Crypto", "VRF", "Ed25519", "MMM" ]

[dependencies]
cryptoxide = "0.1"
rand_core = { version = "0.3.0", default-features = false }
curve25519-dalek = "1"
sha2 = "^0.8"
digest = "^0.8"
generic-array = "^0.12"
rand = "0.6"

[features]
with-bench = []
