[package]
name = "chain-impl-mockchain"
version = "0.1.0"
authors = [ "Nicolas Di Prima <nicolas.diprima@iohk.io>"
          , "Vincent Hanquez <vincent.hanquez@iohk.io>"
          , "Eelco Dolstra <edolstra@gmail.com>"
          , "Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"
          , "Alexander Vershilov <alexander.vershilov@gmail.com>"
          ]
edition = "2018"

[features]
generic-serialization = [ "chain-addr/generic-serialization", "serde", "serde_derive" ]

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
chain-core = { path = "../chain-core" }
chain-addr = { path = "../chain-addr" }
chain-crypto = { path = "../chain-crypto" }
cardano = { path= "../cardano" }
rand = "0.6"
imhamt = { path = "../imhamt" }

[dev-dependencies]
quickcheck = "0.8"
chain-core = { path = "../chain-core", features=["property-test-api"]}
chain-addr = { path = "../chain-addr", features=["property-test-api"]}
rand_chacha = "0.1"
rand_core = "0.4"
