[package]
name = "chain-impl-mockchain"
version = "0.1.0"
authors = [ "Nicolas Di Prima <nicolas.diprima@iohk.io>"
          , "Vincent Hanquez <vincent.hanquez@iohk.io>"
          , "Eelco Dolstra <edolstra@gmail.com>"
          , "Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"
          , "Alexander Vershilov <alexander.vershilov@gmail.com>"
          ]
edition = "2018"

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
chain-core = { path = "../chain-core" }
chain-addr = { path = "../chain-addr" }
chain-crypto = { path = "../chain-crypto" }
chain-storage = { path = "../chain-storage" }
cardano = { path= "../cardano" }
rand = "0.6"
imhamt = { path = "../imhamt" }
lazy_static = "1.3.0"
strum = "0.15.0"
strum_macros = "0.15.0"
custom_error = "1.6"

[dev-dependencies]
quickcheck = "0.8"
chain-core = { path = "../chain-core", features=["property-test-api"]}
chain-crypto = { path = "../chain-crypto", features=["property-test-api"]}
chain-addr = { path = "../chain-addr", features=["property-test-api"]}
rand_chacha = "0.1"
rand_core = "0.4"
