[package]
name = "chain-impl-mockchain"
version = "0.1.0"
authors = [ "Nicolas Di Prima <nicolas.diprima@iohk.io>"
          , "Vincent Hanquez <vincent.hanquez@iohk.io>"
          , "Eelco Dolstra <edolstra@gmail.com>"
          , "Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"
          , "Alexander Vershilov <alexander.vershilov@gmail.com>"
          ]
edition = "2018"

[dependencies]
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
chain-core = { path = "../chain-core" }
chain-addr = { path = "../chain-addr" }
chain-crypto = { path = "../chain-crypto" }
chain-storage = { path = "../chain-storage" }
chain-time = { path = "../chain-time" }
rand_core = "0.3"
rand_os = "0.1"
imhamt = { path = "../imhamt" }
strum = "0.15.0"
strum_macros = "0.15.0"
custom_error = "1.6"
cfg-if = "0.1"
quickcheck = { version = "0.8", optional = true }

cardano-legacy-address = { path= "../cardano-legacy-address" }

[features]
property-test-api = ["quickcheck"]

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8.0"
chain-core = { path = "../chain-core", features=["property-test-api"]}
chain-crypto = { path = "../chain-crypto", features=["property-test-api"]}
chain-addr = { path = "../chain-addr", features=["property-test-api"]}
ed25519-bip32 = "0.1"
rand_chacha = "0.1"
lazy_static = "1.3.0"
