[package]
name = "chain-storage-sqlite"
version = "0.1.0"
authors = [ "Nicolas Di Prima <nicolas.diprima@iohk.io>"
          , "Vincent Hanquez <vincent.hanquez@iohk.io>"
          , "Eelco Dolstra <edolstra@gmail.com>"
          , "Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"
          , "Alexander Vershilov <alexander.vershilov@gmail.com>"
          ]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
chain-core = { path = "../chain-core" }
chain-storage = { path = "../chain-storage" }
r2d2 = { version = "0.8" }
r2d2_sqlite = { version = "0.8" }

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]

[dev-dependencies]
chain-storage = { path = "../chain-storage", features=["test-api"] }
rand_os = "0.1"
