[package]
name = "chain-storage"
version = "0.1.0"
authors = [ "Nicolas Di Prima <nicolas.diprima@iohk.io>"
          , "Vincent Hanquez <vincent.hanquez@iohk.io>"
          , "Eelco Dolstra <edolstra@gmail.com>"
          , "Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"
          , "Alexander Vershilov <alexander.vershilov@gmail.com>"
          ]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
chain-core = { path = "../chain-core" }
rand_core = { version = "0.3", optional = true }

[dev-dependencies]
rand_core = { version = "0.3" }
rand_os = { version = "0.1" }

[features]
test-api = ["rand_core"]
