[package]
name = "ed25519-bip32"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "ed25519-bip32", "bip32", "ed25519" ]

[dependencies]
cryptoxide = "0.1"

[features]
default = []
with-bench = []
