[package]
authors = ["dev@iohk.io"]
description = "explorer service for jormungandr"
documentation = "https://github.com/input-output-hk/jormungandr#USAGE.md"
edition = "2021"
homepage = "https://github.com/input-output-hk/jormungandr#README.md"
license = "MIT OR Apache-2.0"
name = "explorer"
repository = "https://github.com/input-output-hk/jormungandr"
version = "0.9.1"

[dependencies]
futures = "0.3.5"
futures-channel = "0.3.5"
futures-util = "0.3.5"
async-graphql = "4.0.13"
async-graphql-warp = "4.0.13"
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.81"
serde_yaml = "0.8.13"
structopt = "0.3.15"
thiserror = "1.0.20"
anyhow = "1.0.56"
url = "2.1.1"
warp = {version = "0.3.1", features = ["tls"]}
tracing = "0.1"
tracing-futures = "0.2"
tracing-gelf = { version = "0.6", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
tracing-appender = "0.2"
tokio = { version = "^1.4", features = ["rt-multi-thread", "time", "sync", "rt", "signal", "test-util"] }
tokio-stream = { version = "0.1.4", features = ["sync"] }
tokio-util = { version = "0.6.0", features = ["time"] }
tonic = "0.4"
multiaddr = { package = "parity-multiaddr", version = "0.11" }
rand = "0.8.5"
rand_chacha = "0.3.0"
base64 = "0.13.0"
lazy_static = "1.4"
http-zipkin = "0.3.0"

jormungandr-lib = {path = "../jormungandr-lib"}
jormungandr-automation = { path = "../testing/jormungandr-automation" }
jormungandr-integration-tests = { path = "../testing/jormungandr-integration-tests" }
thor = { path = "../testing/thor" }

cardano-legacy-address = {git = "https://github.com/input-output-hk/chain-libs.git", branch = "master"}
chain-addr = {git = "https://github.com/input-output-hk/chain-libs.git", branch = "master"}
chain-core = {git = "https://github.com/input-output-hk/chain-libs.git", branch = "master"}
chain-crypto = {git = "https://github.com/input-output-hk/chain-libs.git", branch = "master"}
chain-impl-mockchain = {git = "https://github.com/input-output-hk/chain-libs.git", branch = "master"}
chain-time = {git = "https://github.com/input-output-hk/chain-libs.git", branch = "master"}
chain-vote = {git = "https://github.com/input-output-hk/chain-libs.git", branch = "master"}
chain-ser = {git = "https://github.com/input-output-hk/chain-libs.git", branch = "master"}
chain-network = {git = "https://github.com/input-output-hk/chain-libs.git", branch = "master"}
imhamt = {git = "https://github.com/input-output-hk/chain-libs.git", branch = "master"}

[features]
default = []
evm = ["chain-impl-mockchain/evm", "jormungandr-lib/evm"]
