[package]
name = "jcli-lib"
version = "0.11.1"
authors = [ "dev@iohk.io" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/input-output-hk/jormungandr"
homepage = "https://github.com/input-output-hk/jormungandr#README.md"
documentation = "https://github.com/input-output-hk/jormungandr#USAGE.md"
description = """
Midgard Serpent
"""
edition = "2018"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.59"
serde_yaml = "0.8"
bincode = "1.3.3"
mime = "^0.3.7"
bech32 = "0.7"
hex = "0.4.2"
rayon = "1.5"
base64 = "0.13.0"
chain-core      = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-addr      = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-crypto    = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-time    = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-vote = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master", features = ["p256k1"] }
jormungandr-lib = { path = "../jormungandr-lib" }
gtmpl = "0.6.0"
valico = "3.5.0"
ed25519-bip32 = "0.3"
thiserror = "1.0"
bytes = "1.0"

[dependencies.structopt]
version = "^0.3"
optional = true

[dependencies.clap]
version = "2.33"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls", "json"]

[dev-dependencies]
assert_fs = "1.0"
predicates = "1.0"

[build-dependencies]
versionisator = "1.0.2"

[features]
default = ["structopt"]
