[package]
name = "jcli"
version = "0.13.0"
authors = [ "dev@iohk.io" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/input-output-hk/jormungandr"
homepage = "https://github.com/input-output-hk/jormungandr#README.md"
documentation = "https://github.com/input-output-hk/jormungandr#USAGE.md"
description = """
Midgard Serpent
"""
edition = "2021"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.74"
serde_yaml = "0.8"
bincode = "1.3.3"
structopt = "^0.3"
bech32 = "0.8"
hex = "0.4.2"
rayon = "1.5"
base64 = "0.13.0"
chain-core      = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-addr      = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-crypto    = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-time    = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-vote = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
jormungandr-lib = { path = "../jormungandr-lib" }
gtmpl = "0.6.0"
ed25519-bip32 = "0.4.1"
thiserror = "1.0"
bytes = "1.1"
rpassword = "5.0"

[features]
evm = ["jormungandr-lib/evm"]

[dependencies.clap]
version = "2.33"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls", "json"]

[dev-dependencies]
assert_fs = "1.0"
predicates = "2.0"
quickcheck = "0.9"
# FIXME required to work with quickcheck 0.9. Remove after migrating another crate or newer quickcheck
rand07 = { package = "rand", version = "0.7" }
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master", features = [ "property-test-api" ] }

[build-dependencies]
versionisator = "1.0.2"

[lib]
name = "jcli_lib"
path = "src/lib.rs"

[[bin]]
name = "jcli"
path = "src/main.rs"
