[package]
name = "jormungandr-integration-tests"
version = "0.3.1"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
edition = "2018"

[dependencies]
chain-crypto    = { path = "../chain-deps/chain-crypto" }
chain-addr      = { path = "../chain-deps/chain-addr" }
jormungandr-lib = { path = "../jormungandr-lib" }
rand = "0.6"
rand_chacha = "0.1"
regex = "1.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.38"
serde_yaml = "0.8"
quickcheck = "0.8"
galvanic-test = "0.2.0"
assert_cmd = "0.11"
assert_fs = "0.11"
mktemp = "0.4.0"
lazy_static = "1.3"
custom_error = "1.6"

[dev-dependencies]
jormungandr = { path = "../jormungandr" }
jcli = { path = "../jcli" }

[features]
soak-test = []
