[package]
name = "jormungandr-integration-tests"
version = "0.7.0-alpha.dev"
authors = [ "dev@iohk.io" ]
edition = "2018"

[dev-dependencies]
chain-core           = { path = "../chain-deps/chain-core", features=["property-test-api"]}
chain-crypto         = { path = "../chain-deps/chain-crypto", features=["property-test-api"]}
chain-addr           = { path = "../chain-deps/chain-addr", features=["property-test-api"]}
chain-impl-mockchain = { path = "../chain-deps/chain-impl-mockchain", features=["property-test-api"]}
jormungandr-lib = { path = "../jormungandr-lib" }
rand = "0.6"
rand_core = "0.3"
rand_chacha = "0.1"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
quickcheck = "0.8"
galvanic-test = "0.2.0"
assert_cmd = "0.11"
assert_fs = "0.11"
mktemp = "0.4.0"
lazy_static = "1.3"
custom_error = "1.7"
poldercast = { version = "*", features = [ "serde_derive" ] }
jormungandr = { path = "../jormungandr" }
jcli = { path = "../jcli" }

[features]
soak-test = []
testnet = []
