[package]
name = "jormungandr-integration-tests"
version = "0.7.0-rc1"
authors = [ "dev@iohk.io" ]
edition = "2018"

[dependencies]
grpc            = "0.6.1"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"
base64 = "0.10.1"
bytes = "0.4"
hex = "0.3.2"
chain-addr      = { path = "../chain-deps/chain-addr" }
chain-core      = { path = "../chain-deps/chain-core" }
chain-crypto    = { path = "../chain-deps/chain-crypto" }
chain-impl-mockchain = { path = "../chain-deps/chain-impl-mockchain" }
chain-storage   = { path = "../chain-deps/chain-storage" }
chain-storage-sqlite = { path = "../chain-deps/chain-storage-sqlite" }
chain-time      = { path = "../chain-deps/chain-time" }
jormungandr-lib = { path = "../jormungandr-lib" }
rand = "0.6"
rand_core = "0.3"
rand_chacha = "0.1"
slog = { version = "^2.5.1", features = [ "max_level_trace", "release_max_level_trace" ] }
slog-async = "2.3.0"
slog-json = "2.3.0"
slog-scope = "4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
lazy_static = "1.3"
mktemp = "0.4.0"
regex = "1.1"
custom_error = "1.7"
error-chain = "0.12"
jormungandr = { path = "../jormungandr" }
jcli = { path = "../jcli" }

[dev-dependencies]
chain-core           = { path = "../chain-deps/chain-core", features=["property-test-api"]}
chain-crypto         = { path = "../chain-deps/chain-crypto", features=["property-test-api"] }
chain-addr           = { path = "../chain-deps/chain-addr", features=["property-test-api"] }
chain-impl-mockchain = { path = "../chain-deps/chain-impl-mockchain", features=["property-test-api"] }
jormungandr-lib = { path = "../jormungandr-lib" }
rand = "0.6"
rand_core = "0.3"
rand_chacha = "0.1"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
quickcheck = "0.8"
galvanic-test = "0.2.0"
assert_cmd = "0.11"
assert_fs = "0.11"
mktemp = "0.4.0"
lazy_static = "1.3"
custom_error = "1.7"
ed25519-bip32 = "0.1"
poldercast = { version = "*", features = [ "serde_derive" ] }

[features]
soak-test = []
testnet = []

[build-dependencies]
protoc-rust = "2.0"
