[package]
name = "jormungandr-lib"
version = "0.13.0"
authors = ["dev@iohk.io"]
edition = "2021"

description = "Data structures and formats used by Jormungandr node API and configuration files"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.12", features = ["macros"] }
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-addr      = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-core      = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-crypto    = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-time           = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master"}
chain-vote = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-evm = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master", optional = true }
cardano-legacy-address = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
typed-bytes = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
time = { version = "0.3", features = ["serde", "local-offset", "parsing", "formatting", "macros"]}
humantime = "2.0"
thiserror = "1.0"
multiaddr = { package = "parity-multiaddr", version = "0.11", default-features = false }
hex = "0.4"
bech32 = "0.8"
base64 = "0.13.0"
http = "0.2.2"

[dev-dependencies]
bincode = "1.3.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
# FIXME required to work with quickcheck 0.9. Remove after migrating another crate or newer quickcheck
rand07 = { package = "rand", version = "0.7" }
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master", features = [ "property-test-api" ] }
chain-addr      = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master", features = [ "property-test-api" ] }
chain-crypto    = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master", features = [ "property-test-api" ] }
ed25519-bip32 = "0.4.1"
serde_yaml = "0.8"
serde_json = "1.0"

[features]
evm = ["chain-impl-mockchain/evm", "chain-evm"]
